Mon Jul 15 02:21:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* encoding.c (enc_inspect): use PRIsVALUE to preserve the result
	  encoding.

	* encoding.c (enc_set_index): deal with terminator so that
	  rb_enc_set_index also works.

Sun Jul 14 23:21:47 2013  Tanaka Akira  <akr@fsij.org>

	* configure.in: Check __builtin_popcountl, __builtin_bswap32 and
	  __builtin_bswap64.

	* internal.h (swap32): Use the configure result for the condition to
	  use __builtin_bswap32.
	  (swap64): Use the configure result for the condition to use
	  __builtin_bswap64.

	* bignum.c (ones): Use the configure result for the condition to use
	  __builtin_popcountl.
	  (bary_unpack_internal): Use appropriate types for swap argument.

Sun Jul 14 22:21:11 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_subb): Support xn < yn.
	  (bigsub_core): Removed.
	  (bigsub): Don't compare before subtraction.  Just subtract and
	  get the two's complement if the subtraction causes a borrow.

Sun Jul 14 00:36:03 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (DIGSPERLONG): Unused macro removed.
	  (DIGSPERLL): Ditto.

Sun Jul 14 00:32:51 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_big_aref): Less scan when the number is negative.

Sun Jul 14 00:17:42 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_shift): Avoid signed integer overflow.

Sun Jul 14 00:14:15 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_mul_precheck): Use bary_small_lshift or
	  bary_mul_normal if xl is 1.

Sat Jul 13 22:58:16 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (big_shift3): New function.
	  big_lshift and big_rshift are merged.
	  (big_shift2): New function.
	  (big_lshift): Use big_shift3.
	  (big_rshift): Ditto.
	  (check_shiftdown): Removed.
	  (rb_big_lshift): Use big_shift2 and big_shift3.
	  (rb_big_rshift): Ditto.
	  (big_lshift): Removed.
	  (big_rshift): Ditto.

Sat Jul 13 15:51:38 2013  Tanaka Akira  <akr@fsij.org>

	* bignum.c (bary_small_lshift): Use size_t instead of long.